fixed filter button alignment

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -309,3 +309,11 @@ form .control-left-align {
   margin-right: auto;
   text-align: center;
 }
+
+.no-meetups-clear-filter-container {
+  text-align: center;
+  width: 100%;
+  padding-top: 7px;
+  height: 50px;
+  background-color: white;
+}
